Fix validation result
